Add method RemoveObjectFromUserPermission
